syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";

message ProductReworkCauseInfo {
	//ID 
 	string id=2;
	//代号 
 	string code=3;
	//描述 
 	string description=4;
	//备注 
 	string remark=5;
    //返工类型 
 	repeated ProductReworkTypePossibleCauseInfo productReworkTypePossibleCauses=6;
}

message ProductReworkTypePossibleCauseInfo {
    string id=4;
	//返工原因ID 
    string productReworkCauseID=2;
	//返工类型ID 
    string productReworkTypeID=3;
}

message QueryProductReworkCauseRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	//代号或描述
    // @inject_tag: uri:"code" form:"code"
    string code=5;
}

message QueryProductReworkCauseResponse{
    Code code=1;
    string message=2;
    repeated ProductReworkCauseInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllProductReworkCauseResponse{
    Code code=1;
    string message=2;
    repeated ProductReworkCauseInfo data=3;
}

message GetProductReworkCauseDetailResponse{
    Code code=1;
    string message=2;
    ProductReworkCauseInfo data=3;
}